--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^17.0.2",
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^17.0.2",
+		"react-dotenv": "^0.1.3",
 		"react-icons": "^4.4.0",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
@@ -25,13 +26,15 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.3.0",
+		"serve-build": "^0.1.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"start": "react-dotenv && react-scripts start",
+    	"build": "react-dotenv && react-scripts build", 
+    	"serve": "react-dotenv && serve build", 
+    	"test": "react-scripts test",
+    	"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
