--- a/package.json
+++ b/package.json
@@ -30,11 +30,10 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-dotenv && react-scripts start",
-    	"build": "react-dotenv && react-scripts build", 
-    	"serve": "react-dotenv && serve build", 
-    	"test": "react-scripts test",
-    	"eject": "react-scripts eject"
+		"start": "serve -s build",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
