--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.3.0",
-		"serve-build": "^0.1.0",
+		"serve": "^14.0.1",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "npx serve -s build",
+		"start": "serve -s build",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
