--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
 		"@testing-library/react": "^11.2.6",
 		"@testing-library/user-event": "^13.1.1",
 		"axios": "^0.27.2",
+		"mercadopago": "^1.5.14",
+		"query-string": "^7.1.1",
 		"react": "^17.0.2",
 		"react-copy-to-clipboard": "^5.1.0",
 		"react-dom": "^17.0.2",
-		"react-dotenv": "^0.1.3",
+		"react-https-redirect": "^1.1.0",
 		"react-icons": "^4.4.0",
 		"react-redux": "^7.2.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^5.0.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
+		"serve-build": "^0.1.0",
 		"redux-thunk": "^2.3.0",
-		"serve": "^14.0.1",
+		"stars-rating": "^1.1.0",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
