--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
 		"react-scripts": "^5.0.1",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
-		"serve": "^14.0.1",
 		"redux-thunk": "^2.3.0",
 		"stars-rating": "^1.1.0",
-		"web-vitals": "^2.1.4"
+		"web-vitals": "^2.1.4",
+		"serve": "^14.0.1"
 	},
 	"scripts": {
 		"start": "serve -s build",
